--- a/src/Screens/Login/Login.css
+++ b/src/Screens/Login/Login.css
@@ -3,7 +3,7 @@
     --secondary-color: #075E54;
     --background-color: #f5f5f5;
     --text-color: #333;
-    --error-color: #dc3545;
+    --error-color: #e6e3e3;
 }
 
 .login-container {
