--- a/src/Screens/ForgotPassword/ForgotPassword.css
+++ b/src/Screens/ForgotPassword/ForgotPassword.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --primary-color: #25D366;
     --secondary-color: #075E54;
     --background-color: #f5f5f5;
@@ -225,3 +225,4 @@ button:focus {
         color: #e0e0e0;
     }
 }
+ */
