--- a/src/Screens/ResetPassword/ResetPassword.css
+++ b/src/Screens/ResetPassword/ResetPassword.css
@@ -1,4 +1,4 @@
-
+/* 
 .login-container {
     width: 100%;
     max-width: 500px;
@@ -124,4 +124,4 @@
     .login-container h1 {
         margin-bottom: 1.5rem;
     }
-}
+} */
