--- a/src/Screens/Login/Login.css
+++ b/src/Screens/Login/Login.css
@@ -98,7 +98,7 @@ form span button {
 }
 
 form span button a {
-    color: var(--primary-color);
+    color: white;
     text-decoration: none;
 }
 
