--- a/src/Screens/MessageChat/messageChat.css
+++ b/src/Screens/MessageChat/messageChat.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --primary-color: #25D366;
     --secondary-color: #075E54;
     --background-color: #f5f5f5;
@@ -132,4 +132,4 @@
         border-color: #444;
         color: #e0e0e0;
     }
-}
+} */
