--- a/src/Screens/ForgotPassword/ForgotPassword.css
+++ b/src/Screens/ForgotPassword/ForgotPassword.css
@@ -1,7 +1,7 @@
 :root {
     --whatsapp-green-primary: #25D366;
     --whatsapp-green-secondary: #128C7E;
-    --background-gray: #f0f2f5;
+    --background-gray: #696d74;
     --text-gray: #4a4a4a;
 }
 
@@ -22,7 +22,7 @@ body {
     width: 100%;
     max-width: 400px;
     margin: 50px auto;
-    background-color: white;
+    background-color: rgb(147, 142, 142);
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -30,18 +30,19 @@ body {
 }
 
 .forgot-password-container h1 {
-    color: var(--whatsapp-green-secondary);
+    color: var(--whatsapp-green-primary);
     margin-bottom: 15px;
     font-size: 24px;
 }
 
 .forgot-password-container p {
-    color: #666;
+    color: #3f3b3b;
     margin-bottom: 25px;
     padding: 0 15px;
 }
 
 .forgot-password-container form > div {
+    color:#c8e6c9;
     margin-bottom: 20px;
     text-align: left;
 }
@@ -50,7 +51,7 @@ body {
     display: block;
     margin-bottom: 8px;
     font-weight: 500;
-    color: #333;
+    color: white;
 }
 
 .forgot-password-container input {
@@ -102,7 +103,12 @@ body {
     background-color: var(--whatsapp-green-secondary);
 }
 
+.label{
+    color: white
+}
+
 .form-links {
+    color: white;
     margin-top: 20px;
     font-size: 14px;
 }
@@ -110,7 +116,7 @@ body {
 .form-links span {
     display: block;
     margin-bottom: 10px;
-    color: #666;
+    color: white;
 }
 
 .form-links a {
@@ -120,6 +126,7 @@ body {
 }
 
 .form-links a:hover {
+    color: var(--whatsapp-green-secondary);
     text-decoration: underline;
 }
 
