--- a/src/Screens/ResetPassword/ResetPassword.css
+++ b/src/Screens/ResetPassword/ResetPassword.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'poppins', sans-serif;
 }
 
 .reset-password-container {
@@ -16,7 +16,7 @@
 }
 
 .reset-password-container h1 {
-    color: #128C7E;
+    color: #128c1a;
     text-align: center;
     margin-bottom: 15px;
     font-size: 2rem;
@@ -48,7 +48,7 @@
 .reset-password-container label {
     display: block;
     margin-bottom: 5px;
-    color: #4a4a4a;
+    color: white;
     font-size: 0.9rem;
 }
 
@@ -97,7 +97,6 @@
 
 .form-links {
     width: 100%;
-    max-width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -105,7 +104,7 @@
 }
 
 .form-links span {
-    color: #4a4a4a;
+    color: white;
     margin-bottom: 10px;
     font-size: 0.9rem;
 }
